prevent layout jumps/shifts

--- a/src/code-blocks/components/TabsComponent.css
+++ b/src/code-blocks/components/TabsComponent.css
@@ -1,5 +1,28 @@
 .react-tabs {
   -webkit-tap-highlight-color: transparent;
+
+  /* tablist style logic */
+  select:has(option:nth-of-type(1):checked) ~ ul[role='tablist'] li:nth-of-type(1),
+  select:has(option:nth-of-type(2):checked) ~ ul[role='tablist'] li:nth-of-type(2),
+  select:has(option:nth-of-type(3):checked) ~ ul[role='tablist'] li:nth-of-type(3),
+  select:has(option:nth-of-type(4):checked) ~ ul[role='tablist'] li:nth-of-type(4),
+  select:has(option:nth-of-type(5):checked) ~ ul[role='tablist'] li:nth-of-type(5),
+  select:has(option:nth-of-type(6):checked) ~ ul[role='tablist'] li:nth-of-type(6),
+  select:has(option:nth-of-type(7):checked) ~ ul[role='tablist'] li:nth-of-type(7) {
+    border-bottom: 2px solid #aaa;
+    color: var(--color-text);
+  }
+
+  /* tabpanel visibility logic */
+  select:has(option:nth-of-type(1):not(:checked)) ~ [role='tabpanel']:nth-of-type(1),
+  select:has(option:nth-of-type(2):not(:checked)) ~ [role='tabpanel']:nth-of-type(2),
+  select:has(option:nth-of-type(3):not(:checked)) ~ [role='tabpanel']:nth-of-type(3),
+  select:has(option:nth-of-type(4):not(:checked)) ~ [role='tabpanel']:nth-of-type(4),
+  select:has(option:nth-of-type(5):not(:checked)) ~ [role='tabpanel']:nth-of-type(5),
+  select:has(option:nth-of-type(6):not(:checked)) ~ [role='tabpanel']:nth-of-type(6),
+  select:has(option:nth-of-type(7):not(:checked)) ~ [role='tabpanel']:nth-of-type(7) {
+    display: none;
+  }
 }
 
 .react-tabs__tab-list {
@@ -31,11 +54,6 @@
   color: var(--color-text);
 }
 
-.react-tabs__tab--selected {
-  border-bottom: 2px solid #aaa;
-  color: var(--color-text);
-}
-
 .react-tabs__tab--disabled {
   color: GrayText;
   cursor: default;
@@ -43,12 +61,4 @@
 
 .react-tabs__tab:focus {
   outline: none;
-}
-
-.react-tabs__tab-panel {
-  display: none;
-}
-
-.react-tabs__tab-panel--selected {
-  display: block;
 }
